History of this buildout
========================

5.0.3 (unreleased)
------------------

- Nothing changed yet.


5.0.2 (2013-03-15)
------------------

- Cleanup skin layers.  We created a Minaraad Theme skin layer
  selection when we started on the migration back in 2011, but we do
  not use this anymore.  We update Plone Default now.  This at least
  means we can we now find pyproxy_spinner.gif.
  [maurits]


5.0.1 (2013-03-15)
------------------

- Sort projects by year plus project number and show both.
  [maurits]

- Refuse to send an e-mail for newsletters, etcetera, when this e-mail
  has already been sent in the last thirty minutes.  This will raise
  an exception and show a traceback.  We also show a warning on the
  email_out page with the date and time when this item was sent.
  Sending a test e-mail is always possible.
  [maurits]

- Avoid writing to the database every time we view a meeting.
  [maurits]

- Only update the main attachment count when an agenda item has at
  least one attachment.
  [maurits]

- Fixed possible KeyError on company when member has no such property.
  [maurits]

- Fixed logic error in the display of numbering of attachments in
  meetings.
  [maurits]

- Sort meetings by start date.
  [maurits]


5.0 (2013-03-13)
----------------

- Use officially released Products.PluggableAuthService 1.10.0 and
  collective.emaillogin4 1.3.
  [maurits]

- Use Plone 4.2.4.
  [maurits]

- Use and install collective.emaillogin4 and use internal release of
  Products.PluggableAuthService, soon to be released officially.
  [maurits]

- Memmon limit: 1300.  Use newer versions for supervisor and friends.
  Send a mail to Maurits via scripts/sendmail.py when memmon kills the
  instance.
  [maurits]

- Let memmon check for a maximum memory of 2000 MB instead of 2560.
  [maurits]

- Added custom recent portlet, search portlet and linkedIn portlet
  [vincent]

- Changed text of email subscription notification so it correctly