@@ -1,6 +1,4 @@
 <?xml version="1.0"?>
 <object name="portal_css">
-<!-- <stylesheet title="" cacheable="True" compression="safe" cookable="True" -->
-<!--     enabled="True" expression="" id="minaraad.css" media="all" -->
-<!--     rel="stylesheet" rendering="import"/> -->
+ <stylesheet title="" id="minaraad.css" remove="True"/>
 </object>
