@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<object name="portal_javascripts">
+ <javascript id="se-highlight.js" remove="True"/>
+ <javascript id="ie5fixes.js" remove="True"/>
+</object>
